# Polkadot-Hackathon-Europe-2023

./: .gitignore  LICENSE  README.md  blue_penguin.avif  red_penguin.avif  yellow_penguin.avif
contracts/: .gitignore
contracts/RMRK-NFT/: Cargo.toml  README.md  _tsconfig.json  config.json
contracts/RMRK-NFT/artifacts/: rmrk_example_equippable.contract  rmrk_example_equippable.json  rmrk_example_mintable.contract  rmrk_example_mintable.json
contracts/RMRK-NFT/examples/: README.md
contracts/RMRK-NFT/examples/auction/: Cargo.toml  lib.rs
contracts/RMRK-NFT/rmrk-nft/: README.md
contracts/RMRK-NFT/tests/: merged_equippable.spec.ts  multiasset.spec.ts  nesting.spec.ts  psp34.spec.ts
contracts/artifacts/: rmrk_example_equippable.json  rmrk_example_mintable.contract
contracts/contracts/shiden34/: package.json
contracts/crates/auction/: Cargo.toml
contracts/crates/rmrk/: Cargo.toml
contracts/examples/auction/: Cargo.toml  Cargo1.toml  lib.back  lib.rs  lib1.back  lib1.rs
contracts/examples/equippable/: lib.rs
contracts/examples/mintable/: lib.rs
contracts/types/build-extrinsic/: rmrk_example_equippable.ts
contracts/types/constructors/: rmrk_example_mintable.ts
contracts/types/data/: rmrk_example_equippable.json
contracts/types/event-types/: rmrk_example_equippable.ts
contracts/types/query/: rmrk_example_equippable.ts
nft-marketplace/: .env.local  README.md  package-lock.json  package.json  tsconfig.json
nft-marketplace/pages/: _app.tsx  index.tsx  profile.tsx
nft-marketplace/pages/nft/: create.tsx
nft-marketplace/types/: nft.ts
(+89 files in other folders)
